--- a/chatbot_new/requirements.txt
+++ b/chatbot_new/requirements.txt
@@ -10,3 +10,205 @@ strsimpy
 pymongo
 allennlp==1.0.0
 allennlp-models==1.0.0
+
+2022/12/14 - WanJun Chen updated
+aiohttp              3.8.3
+aiosignal            1.3.1
+allennlp             1.2.1
+allennlp-models      1.2.1
+anyio                3.6.2
+astor                0.8.1
+async-timeout        4.0.2
+attrs                22.1.0
+Babel                2.11.0
+bce-python-sdk       0.8.74
+bcrypt               4.0.1
+bidict               0.22.0
+blis                 0.7.9
+boto3                1.26.29
+botocore             1.29.29
+bottle               0.12.23
+catalogue            1.0.2
+certifi              2022.9.24
+cffi                 1.15.1
+cfgv                 3.3.1
+chardet              3.0.4
+charset-normalizer   2.1.1
+click                8.1.3
+cma                  3.2.2
+colorama             0.4.6
+colorlog             6.7.0
+common               0.1.2
+commonmark           0.9.1
+conllu               4.2.1
+contourpy            1.0.6
+cryptography         38.0.4
+cycler               0.11.0
+cymem                2.0.7
+data                 0.4
+datasets             2.7.1
+decorator            4.4.2
+dill                 0.3.4
+distlib              0.3.6
+dual                 0.0.10
+dynamo3              0.4.10
+easydict             1.10
+en-core-web-sm       2.3.1
+et-xmlfile           1.1.0
+exceptiongroup       1.0.4
+fastapi              0.88.0
+ffmpy                0.3.0
+filelock             3.0.12
+flake8               6.0.0
+Flask                2.2.2
+Flask-Babel          2.0.0
+Flask-Cors           3.0.10
+Flask-SocketIO       5.3.2
+flywheel             0.5.4
+fonttools            4.38.0
+frozenlist           1.3.3
+fsspec               2022.11.0
+ftfy                 6.1.1
+funcsigs             1.0.2
+future               0.18.2
+gast                 0.3.3
+gitdb                4.0.10
+GitPython            3.1.29
+googletrans          4.0.0rc1
+gradio               3.13.0
+graphviz             0.20.1
+h11                  0.9.0
+h2                   3.2.0
+h5py                 3.7.0
+hpack                3.0.0
+hstspreload          2022.12.1
+httpcore             0.9.1
+httpx                0.13.3
+huggingface-hub      0.11.1
+hyperframe           5.2.0
+identify             2.5.9
+idna                 2.10
+importlib-metadata   5.1.0
+iniconfig            1.1.1
+itsdangerous         2.1.2
+jieba                0.42.1
+Jinja2               3.1.2
+jmespath             1.0.1
+joblib               1.2.0
+jsonnetbin           0.16.0
+jsonpickle           3.0.0
+kiwisolver           1.4.4
+linkify-it-py        1.0.3
+markdown-it-py       2.1.0
+MarkupSafe           2.1.1
+matplotlib           3.6.2
+mccabe               0.7.0
+mdit-py-plugins      0.3.3
+mdurl                0.1.2
+methodtools          0.4.5
+multidict            6.0.3
+multiprocess         0.70.12.2
+murmurhash           1.0.9
+nltk                 3.8
+nodeenv              1.7.0
+numpy                1.19.3
+objgraph             3.5.0
+opencv-python        4.2.0.32
+openpyxl             3.0.9
+opt-einsum           3.3.0
+orjson               3.8.3
+overrides            3.1.0
+packaging            22.0
+paddle-bfloat        0.1.7
+paddle2onnx          1.0.5
+paddlefsl            1.0.0
+paddlehub            2.1.0
+paddlenlp            2.1.0
+pandas               1.3.3
+paramiko             2.12.0
+pathlib              1.0.1
+peewee               3.15.4
+Pillow               8.2.0
+pip                  22.3.1
+plac                 1.1.3
+platformdirs         2.6.0
+pluggy               1.0.0
+pre-commit           2.20.0
+preshed              3.0.8
+prettytable          3.5.0
+protobuf             3.20.0
+prox                 0.0.17
+py-rouge             1.1
+pyarrow              10.0.1
+pycodestyle          2.10.0
+pycparser            2.21
+pycryptodome         3.16.0
+pydantic             1.10.2
+pydub                0.25.1
+pyflakes             3.0.1
+Pygments             2.13.0
+pymongo              3.12.0
+PyNaCl               1.5.0
+pyparsing            3.0.9
+pyrouge              0.1.3
+PySocks              1.7.1
+pytest               7.2.0
+python-dateutil      2.8.2
+python-engineio      4.3.4
+python-geoip-python3 1.3
+python-multipart     0.0.5
+python-socketio      5.7.2
+pytz                 2022.6
+PyYAML               6.0
+pyzmq                24.0.1
+rarfile              4.0
+regex                2022.10.31
+requests             2.24.0
+responses            0.18.0
+rfc3986              1.5.0
+rich                 12.6.0
+s3transfer           0.6.0
+sacremoses           0.0.53
+scikit-learn         1.2.0
+scipy                1.9.3
+sentencepiece        0.1.97
+seqeval              1.2.2
+setuptools           65.5.0
+simple-websocket     0.9.0
+six                  1.16.0
+smmap                5.0.0
+sniffio              1.3.0
+spacy                2.3.8
+srsly                1.0.6
+starlette            0.22.0
+strsimpy             0.2.1
+tensorboardX         2.5.1
+thinc                7.4.6
+threadpoolctl        3.1.0
+tight                0.1.0
+tokenizers           0.9.2
+toml                 0.10.2
+tomli                2.0.1
+torch                1.7.1
+tqdm                 4.62.1
+transformers         3.4.0
+typer                0.7.0
+typing_extensions    4.4.0
+uc-micro-py          1.0.1
+urllib3              1.25.11
+uvicorn              0.20.0
+virtualenv           20.17.1
+visualdl             2.4.1
+wasabi               0.10.1
+wcwidth              0.2.5
+websockets           10.4
+Werkzeug             2.2.2
+wheel                0.37.1
+wincertstore         0.2
+wirerope             0.4.6
+word2number          1.1
+wsproto              1.2.0
+xxhash               3.1.0
+yapf                 0.26.0
+yarl                 1.8.2
+zipp                 3.11.0
